--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
-    "chart.js": "^4.3.0",
+    "apexcharts": "^3.40.0",
     "firebase": "^9.20.0",
     "roboto-fontface": "*",
     "vue": "^3.2.38",
-    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.0",
+    "vue3-apexcharts": "^1.4.1",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
   },
